# COREFL-CPC

./: CMakeLists.txt  readme.md
case/1-reactiveShockTube/1-grid/: generateMeshShockTube.py  input.txt
case/1-reactiveShockTube/2-compute/: run.sh
case/1-reactiveShockTube/2-compute/input/: setup.txt
case/1-reactiveShockTube/2-compute/input/boundary_condition/: boundary   0.txt
code/: CMakeLists.txt
code/src/: BoundCond.cpp  BoundCond.cu  BoundCond.cuh  BoundCond.h  BoundaryIO.h  CMakeLists.txt  ChemData.cpp  ChemData.h  Constants.h  DPLUR.cu  DPLUR.cuh  DParameter.cu  DParameter.cuh  DataCommunication.cu  DataCommunication.cuh  Define.h  DigitalFilter.cu  Driver.cu  Driver.cuh  DualTimeStepping.cuh  Field.cu  Field.h  FieldIO.h  FieldOperation.cu  FieldOperation.cuh  FiniteRateChem.cu  FiniteRateChem.cuh  Fluctuation.cu  Fluctuation.cuh  IOManager.h  ImplicitTreatmentHPP.cuh  Initialize.cu  Initialize.cuh  InviscidHybrid.cu  InviscidScheme.cu  InviscidScheme.cuh  Mesh.cpp  Mesh.cu  Mesh.cuh  Mesh.h  (+30 more)
code/src/gxl_lib/: Array.cuh  Math.hpp  Matrix.hpp
code/src/stat_lib/: SpeciesStat.cu  SpeciesStat.cuh  TkeBudget.cuh
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/cases/: index.md
docs/source/getting_started/: folder_struct.md  index.md  readGrid.md  running.md
docs/source/numerics/: curvilinear_coordinates.md  index.md
example/: readme.md
example/ODW/: generate2DMesh.py
example/ODW/input/: setup.txt
example/ODW/input/chemistry/: 2011-Burke-Int.J.Chem-simp.inp
example/STBL/: generateMeshTBL.py
example/STBL/input/: setup.txt
example/constantVolumeReactor/input/: setup.txt
example/constantVolumeReactor/input/chemistry/: 2004-Li-IntJ.Chem.Kinet.inp
example/reactiveShockTube/: generate1DMesh.py  read_grid.py
example/reactiveShockTube/input/: setup.txt
example/reactiveShockTube/input/chemistry/: H2_mech-PREMIX.inp
example/sinWaveProp/: TecplotUtilsGXL.py  centerline_error.py  generate1DMesh.py
example/sinWaveProp/input/: setup.txt
example/sodShockTube/: generate1DMesh.py
example/sodShockTube/input/: setup.txt
readGrid/: main.cpp
src/: BoundCond.cpp  BoundCond.cu  BoundCond.cuh  BoundCond.h  BoundaryIO.h  CMakeLists.txt  ChemData.cpp  ChemData.h  ConstVolumeReactor.cpp  ConstVolumeReactor.h  DPLUR.cu  DPLUR.cuh  DParameter.cu  DParameter.cuh  DataCommunication.cu  DataCommunication.cuh  Define.h  DigitalFilter.cu  DigitalFilter.cuh  Driver.cu  Driver.cuh  DualTimeStepping.cu  DualTimeStepping.cuh  Element.cpp  Field.cu  Field.h  FieldIO.h  FieldOperation.cu  FieldOperation.cuh  FiniteRateChem.cu  FiniteRateChem.cuh  Fluctuation.cu  Fluctuation.cuh  IOManager.h  ImplicitTreatmentHPP.cuh  Initialize.cu  Initialize.cuh  InviscidScheme.cu  InviscidScheme.cuh  Mesh.cpp  (+39 more)
src/gxl_lib/: Array.cuh  Array.hpp  Math.cuh  Math.hpp  MyString.cpp  MyString.h
src/stat_lib/: TkeBudget.cu
tools/: generate3DMesh.py  read_me.md
tools/readGrid/: CMakeLists.txt  Parameter.cpp  input.txt  main.cpp
tools/readGrid/gxl_lib/: MyString.cpp  MyString.h
